k8s/service-adw.yaml
apiVersion: v1
kind: Service
metadata:
  name: adw
  labels:
    component: adw
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    component: adw
